aggiunto gioco dei dadi

--- a/dadi/dadi.html
+++ b/dadi/dadi.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     
-    <script src="dadi/script.js"></script>
+    
+    <script src="dadi.js/script.js"></script>
 </body>
-</html>
+</html>     
